--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
+    "cheap-ruler": "^2.5.1",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
     "vue-multiselect": "^2.1.6"
@@ -38,7 +39,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
