--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -11,12 +11,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
+      - name: set the bloody FA Key
+        run: scripts/set_the_bloody_fa_pro_key.sh
+        env:
+          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_PRO_KEY }}
       - name: Install
         uses: CultureHQ/actions-yarn@master
         with:
           args: install
-        env:
-          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_PRO_KEY }}
       - name: Build
         uses: CultureHQ/actions-yarn@master
         with:
