--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.1.0",
     "cheap-ruler": "^2.5.1",
     "core-js": "^3.4.4",
+    "fuse.js": "^3.4.6",
     "vue": "^2.6.11",
     "vue-multiselect": "^2.1.6"
   },
