--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.4.4",
     "fuse.js": "^3.4.6",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.1.2",
     "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
