--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "s3-deploy": "^1.4.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
