[CAD-125] 🔧 dev site sources dev json

--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         uses: CultureHQ/actions-yarn@master
         with:
-          args: build
+          args: build --mode development
       - name: Copy via ssh
         uses: garygrossgarten/github-action-scp@v0.5.3
         if: github.ref == 'refs/heads/dev'
