--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheap-ruler": "^2.5.1",
     "core-js": "^3.4.4",
     "fuse.js": "^3.4.6",
+    "geolib": "^3.2.1",
     "vue": "^2.6.11",
     "vue-gtag": "^1.1.2",
     "vue-multiselect": "^2.1.6"
