--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "geolib": "^3.2.1",
     "vue": "^2.6.11",
     "vue-gtag": "^1.1.2",
-    "vue-multiselect": "^2.1.6"
+    "vue-multiselect": "^2.1.6",
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-pro": "^5.12.0",
