--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fuse.js": "^3.4.6",
     "geolib": "^3.2.1",
     "vue": "^2.6.11",
+    "vue-burger-menu": "^2.0.3",
     "vue-gtag": "^1.1.2",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5"
