--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-burger-menu": "^2.0.3",
     "vue-gtag": "^1.1.2",
     "vue-multiselect": "^2.1.6",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-pro": "^5.12.0",
