[CDC-46][Dev] 👷‍♀️ add linting to pipelines

--- a/.github/workflows/test-other.yml
+++ b/.github/workflows/test-other.yml
@@ -24,3 +24,7 @@ jobs:
         uses: CultureHQ/actions-yarn@master
         with:
           args: build
+      - name: Lint
+        uses: CultureHQ/actions-yarn@master
+        with:
+          args: lint
