--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -19,6 +19,10 @@ jobs:
         uses: CultureHQ/actions-yarn@master
         with:
           args: install
+      - name: Lint
+        uses: CultureHQ/actions-yarn@master
+        with:
+          args: lint
       - name: Build
         uses: CultureHQ/actions-yarn@master
         with:
