--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --no-fix",
+    "lint:auto-fix": "vue-cli-service lint",
     "test": "echo 'There is no `test` script configured yet.'"
   },
   "dependencies": {
