--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bootstrap-vue": "^2.1.0",
     "cheap-ruler": "^2.5.1",
     "core-js": "^3.4.4",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "fuse.js": "^3.4.6",
     "geolib": "^3.2.1",
     "vue": "^2.6.11",
