--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "jest": {
     "snapshotSerializers": [
@@ -27,6 +28,7 @@
     "core-js": "^3.4.4",
     "fuse.js": "^3.4.6",
     "geolib": "^3.2.1",
+    "jest": "^26.0.1",
     "vue": "^2.6.11",
     "vue-burger-menu": "^2.0.3",
     "vue-gtag": "^1.1.2",
@@ -42,8 +44,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "jest-serializer-vue": "^2.0.2"
+    "jest-serializer-vue": "^2.0.2",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
